--- a/css/normalize.css
+++ b/css/normalize.css
@@ -325,7 +325,7 @@ Preloader Area CSS
 }
 
 .preloader .loader .indicator svg polyline#front {
-  stroke: #1A76D1;
+  stroke: #8b5c2a;
   stroke-dasharray: 12, 36;
   stroke-dashoffset: 48;
   -webkit-animation: dash 1s linear infinite;
@@ -340,7 +340,7 @@ Preloader Area CSS
   height: 100%;
   width: 60%;
   z-index: -1;
-  background: #1A76D1;
+  background: #8b5c2a;
   -webkit-transition: .9s;
   transition: .9s;
 }
@@ -431,7 +431,7 @@ Preloader Area CSS
 	font-size: 14px;
 	text-transform: capitalize;
 	font-weight: 500;
-	background: #1A76D1;
+	background: #8b5c2a;
 	position: relative;
 	box-shadow: none;
 	display: inline-block;
@@ -501,7 +501,7 @@ Preloader Area CSS
 	top:0;
 	height:100%;
 	width:100%;
-	background:#1a76d1;
+	background:#8b5c2a;
 	opacity:0.8;
 }
 /* Bread Crumbs */
@@ -584,7 +584,7 @@ Preloader Area CSS
 	border-radius: 4px;
 }
 .pagination .pagination-list li.active a,.pagination .pagination-list li:hover a{
-	background: #1A76D1;
+	background: #8b5c2a;
 	color: #fff;
 	border-color: transparent;
 }
